--- a/DemoRetrofit/build.gradle
+++ b/DemoRetrofit/build.gradle
@@ -25,3 +25,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    retrofit_version = '2.5.0'
+    rxandroid_version = '2.1.1'
+    rxjava_version = '2.2.7'
+}
